2005-06-24 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libdev/pic18f[68][567]20.c:
	  corrected typos...
	* device/include/pic16/signal.h: added USBIF
	  and SIG_USB

2005-06-24 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libdev/pic18f2455.c,
	  device/include/pic16/pic18f2455.h: NEW
	* device/include/pic16/pic18fregs.h,
	  device/lib/pic16/pics.all,
	  src/pic/device.c: added 18f2455
	* device/lib/pic16/libdev/pic18f[68][567]20.c,
	  device/include/pic16/{pic18f[68][567].h,usart.h}:
	  replaced MULTIPLE_USARTS define with more relaible
	  compatibility sfrs (for USART access)

2005-06-20 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/pcode.c : Fixed problem when a string constant contains a "\r\n" 
	  and the output asm file line is printed on two lines.

2005-06-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/hc08.src/inst.cc (inst_condbranch): fixed simulation of
	  BGT, BLE, BHI, and BLS instructions
	* src/hc08/gen.c (outAcc, outBitC, outBitNV, genCmpLt, genCmpGt,
	  genCmpEq): removed
	* src/hc08/gen.c (genCmpEQorNE, genCmp, branchopCmp, nameCmp,
	  negatedCmp, exchangedCmp, genhc08Code): rewrite of comparison handling,
	  fixes bug #1216342
	* src/hc08/peeph.def: added rules 2g - 2l for new conditional branches
        
2005-06-15 Raphael Neider <rneider AT web.de>

	* src/pic16/NOTES: moved Vangelis from active developers to people to contact
	* device/include/pic16/{6520.h,8520.h}: fixed configuration bits
	* src/pic16/gen.c (): prevent iTemps from being considered to be in CODESPACE,
	  fixes bug #1221120; for symbols in CODESPACE get number of bytes to read from
	  OP_SYM_TYPE() instead of OP_SYM_ETYPE()

2005-06-06 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/include/mcs51/reg764.h: Changed PB0 to PBO as requested by
	  Marcel Telka in bug #1215704

2005-06-02 Slade Rich <slade_rich AT users.sourceforge.net>
